tests/kulezi_tests/bad/undeclared_method_type.lat
class C {
    D foo() {
        
    }
}


int main() {

}